--- a/src/screen/Screen1.css
+++ b/src/screen/Screen1.css
@@ -7,12 +7,27 @@
     margin: 25px;
     margin-left: 25px;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(5,1fr);
     gap: 2rem;
+}
+
+.char_container{
+    background-color: rgb(81, 80, 87);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    gap: 0.5rem;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 .main_container{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url(https://wallpapercave.com/wp/CJVyY3G.jpg);
+  height: fit-content;
 }
