--- a/src/screen/Screen2.css
+++ b/src/screen/Screen2.css
@@ -24,4 +24,44 @@
     background-color: rgb(100, 100, 98);
     padding: 15px;
     border-radius: 10px;
+    margin-left: 70px;
+}
+
+/* ==========Media  Queries (medium devices) =============*/
+
+@media screen and (max-width: 1024px) {
+    .details_container{
+        padding: 15px;
+        gap: 2rem;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+}
+
+/* ==========Media  Queries (small devices) =============*/
+
+@media screen and (max-width: 600px) {
+    .details_container{
+        padding: 18px;
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        height: fit-content;
+    }
+    .screen2_image{
+        width: 300px;
+        height: 400px;
+        margin-left: 10px;
+    }
+
+    .films_container{
+        gap: 1rem;
+        background-color: rgb(100, 100, 98);
+        padding: 15px;
+        margin-left: 10px;
+    }
+
+    .details_content{
+        margin-left: 25px;
+    }
 }
