--- a/src/screen/Screen2.css
+++ b/src/screen/Screen2.css
@@ -5,8 +5,10 @@
     align-items: center;
     gap: 2rem;
     color: white;
-    background-image: url(https://wallpapercave.com/wp/CJVyY3G.jpg);
+    background-image: url(https://wallpaperaccess.com/full/652207.jpg);
     height: 100vh;
+    background-size: cover;
+    background-position: center;
 }
 
 .screen2_image{
