--- a/src/screen/Screen1.css
+++ b/src/screen/Screen1.css
@@ -41,7 +41,7 @@
     flex-direction: column;
     align-items: center;
     background-image: url(https://wallpapercave.com/wp/CJVyY3G.jpg);
-    height: 100vh;
+    height: fit-content;
 }
 
 /* ==========Media  Queries (medium devices) =============*/
