--- a/src/screen/Screen2.css
+++ b/src/screen/Screen2.css
@@ -11,6 +11,10 @@
     background-position: center;
 }
 
+.screen2_main_container > h1{
+    background-color: black;
+}
+
 .screen2_image{
     width: 400px;
     height: 500px;
