--- a/src/component/favourites/Favourite.css
+++ b/src/component/favourites/Favourite.css
@@ -12,6 +12,7 @@
     height: 100vh;
     background-position: center;
     background-size: contain;
+    overflow: scroll;
 }
 
 .fav_char_container{
