--- a/src/screen/Screen1.css
+++ b/src/screen/Screen1.css
@@ -5,10 +5,18 @@
 
 .characters_container{
     margin: 25px;
-    margin-left: 25px;
+    margin-top: 150px;
     display: grid;
     grid-template-columns: repeat(5,1fr);
     gap: 2rem;
+}
+
+.logo_image_main{
+    margin: 15px;
+    border-radius: 12px;
+    position: absolute;
+    top: 8px;
+    left: 3%;
 }
 
 .char_container{
@@ -41,7 +49,7 @@
     flex-direction: column;
     align-items: center;
     background-image: url(https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg);
-    height: 48rem;
+    height: 50rem;
 }
 
 .saved_list_button{
@@ -55,10 +63,17 @@
 @media screen and (max-width: 1024px) {
     .characters_container{
         margin: 20px;
+        margin-top: 110px;
         grid-template-columns: repeat(3,1fr);
     }
     .main_container{
-        height: 85rem;
+        height: 90rem;
+        align-items: flex-end;
+        padding-right: 35px;
+    }
+    .saved_list_button{
+        position: static;
+        margin-bottom: 20px;
     }
 }
 
@@ -71,9 +86,16 @@
     }
     .main_container{
         height: fit-content;
+        align-items: center;
+        padding-right: 0;
+        width: 390px;
     }
     .saved_list_button{
         position: static;
         margin-bottom: 20px;
+    }
+    .logo_image_main{
+        margin: 15px;
+        position: static;        
     }
 }
